--- a/punto-1-3/styles/global-styles.css
+++ b/punto-1-3/styles/global-styles.css
@@ -26,7 +26,7 @@ p{
 h2{
     margin: 5px 0px ;
     color: #454868;
-    font-family: 'Just';
+    font-family: 'Jost';
     font-size: 48px;
     line-height: 55px;
     letter-spacing: -0.64px;
