--- a/punto-1-3/styles/header-styles.css
+++ b/punto-1-3/styles/header-styles.css
@@ -3,26 +3,26 @@ header{
     justify-content: space-between;
     margin: 0px 100px;
 }
-.header--navigation{
+.header__navigation{
     display: flex;
     align-items: center;
 }
-.header--navigation nav ul{
+.header__navigation nav ul{
     display: flex;
     gap: 45px;
     list-style: none;
 
 }
-.header--navigation nav ul li a{
+.header__navigation nav ul li a{
     text-decoration: none;
     color: #454868;
 }
-.header--settings{
+.header__settings{
     display: flex;
     align-items: center;
     gap: 70px;
 }
-.header--settings div{
+.header__settings div{
     display: flex;
     align-items: center;
     gap: 10px;
@@ -30,7 +30,7 @@ header{
     font-size: 16px;
     font-weight: 400;
 }
-.header--settings button{
+.header__settings button{
     background-color: transparent;
     border-radius: 1px solid #45486854;
 }
